[package]
name = "bevy_runner"
version = "0.0.1"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[features]
default = [ "ui-debug" ]
ui-debug = [ "dep:bevy-inspector-egui", "heron/debug-2d" ]
dist = []

[dependencies]
bevy = "0.7"
# bevy-parallax = "0.1.2"
bevy_asset_loader = "0.10.0"
leafwing-input-manager = "0.3.0"
bevy_tweening = "0.4.0"
heron = { version = "3.0.0", features = [ "2d" ] }
bevy-parallax = { git = "https://github.com/SergioRibera/bevy-parallax", branch = "feature_add_position_parameter" }
bevy-inspector-egui = { version = "0.10.0", optional = true }
